# gdpr-pii-scanner

./: .gitignore  .pii-ignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION_GUIDE.md  PROGRESS.md  README.md  RELEASE-SUMMARY.md  RELEASE_NOTES.md  ROADMAP.md  V0.4.0-SUMMARY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: scan_benchmark.rs
docs/: API_SCANNING.md  TASK5_SUMMARY.md
examples/: api_scan_example.sh  config.toml  plugin_au_tfn.toml  plugin_ssn.toml
examples/plugins/: README.md  credit_card.detector.toml  employee_id.detector.toml  patient_id.detector.toml
src/: config.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/core/: context.rs  detector.rs  mod.rs  plugin.rs  types.rs
src/crawler/: filter.rs  mod.rs  walker.rs
src/database/: mod.rs  mongodb.rs  mysql.rs  postgres.rs  scanner.rs  types.rs
src/detectors/: mod.rs  plugin.rs  plugin_loader.rs
src/detectors/be/: mod.rs  rrn.rs
src/detectors/de/: mod.rs  steuer_id.rs
src/detectors/dk/: cpr.rs  mod.rs
src/detectors/es/: dni.rs  mod.rs  nie.rs
src/detectors/eu/: iban.rs  mod.rs
src/detectors/fi/: hetu.rs  mod.rs
src/detectors/financial/: creditcard.rs  mod.rs
src/detectors/fr/: mod.rs  nir.rs
src/detectors/gb/: mod.rs  nhs.rs
src/detectors/it/: codice_fiscale.rs  mod.rs
src/detectors/nl/: bsn.rs  mod.rs
src/detectors/no/: fodselsnummer.rs  mod.rs
src/detectors/personal/: email.rs  mod.rs
src/detectors/pl/: mod.rs  pesel.rs
src/detectors/pt/: mod.rs  nif.rs
src/detectors/se/: mod.rs  personnummer.rs
src/detectors/security/: api_keys.rs  mod.rs
src/extractors/: docx.rs  mod.rs  pdf.rs  registry.rs  xlsx.rs
src/reporter/: csv.rs  html.rs  json.rs  mod.rs  terminal.rs
src/scanner/: api.rs  engine.rs  mod.rs
src/utils/: checksum.rs  entropy.rs  masking.rs  mod.rs
