[package]
name = "pii-radar"
version = "0.5.0"
edition = "2021"
authors = ["PII-Radar Contributors"]
license = "MIT OR Apache-2.0"
description = "High-performance GDPR-compliant PII scanner for European countries - detects BSN, IBAN, NIR, Codice Fiscale, and more"
repository = "https://github.com/silv3rshi3ld/gdpr-pii-scanner"
readme = "README.md"
keywords = ["pii", "security", "privacy", "scanner", "gdpr"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI & Argument Parsing
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "3.1"
indicatif = "0.18"

# Concurrency & Performance
rayon = "1.10"
crossbeam = "0.8"
num_cpus = "1.16"

# Regex & Pattern Matching
regex = "1.10"
fancy-regex = "0.17"
once_cell = "1.19"

# File System
ignore = "0.4"
walkdir = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
toml = "0.9"

# Templating & Time
tera = "1.19"
chrono = "0.4"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Document Extraction
lopdf = "0.39"              # PDF text extraction
zip = "4.2"                 # DOCX and XLSX support (compatible with calamine 0.32)
quick-xml = "0.39"          # XML parsing for DOCX
calamine = "0.33"           # Excel/XLSX parsing - Re-enabled with zip 4.2 compatibility
encoding_rs = "0.8"         # Character encoding detection

# Crypto/Hashing (voor validatie)
sha2 = "0.10"
base64 = "0.22"

# Entropy berekening
ordered-float = "5.1"

# Database connectivity (optional feature for database scanning)
# Note: MySQL support removed to eliminate rsa crate vulnerability (RUSTSEC-2023-0071)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "sqlite"], optional = true }
mongodb = { version = "3.5", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

# Directories
dirs = "6.0"

# HTTP Client for API scanning
reqwest = { version = "0.13", features = ["blocking", "json"] }
url = "2.5"

[features]
default = []
database = ["sqlx", "mongodb", "tokio", "futures"]

[dev-dependencies]
criterion = "0.8"
tempfile = "3.10"
pretty_assertions = "1.4"

[[bench]]
name = "scan_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1  # Snellere development builds
